@@ -26,7 +26,8 @@
 /**
  * RecordCompilationTests
  *
- * @test 8250629 8252307 8247352 8241151
+ * @test
+ * @bug 8250629 8252307 8247352 8241151 8246774
  * @summary Negative compilation tests, and positive compilation (smoke) tests for records
  * @library /lib/combo /tools/lib /tools/javac/lib
  * @modules
@@ -35,9 +36,8 @@
  *      jdk.compiler/com.sun.tools.javac.util
  *      jdk.jdeps/com.sun.tools.classfile
  * @build JavacTestingAbstractProcessor
- * @compile --enable-preview -source ${jdk.version} RecordCompilationTests.java
- * @run testng/othervm -DuseAP=false --enable-preview RecordCompilationTests
- * @run testng/othervm -DuseAP=true --enable-preview RecordCompilationTests
+ * @run testng/othervm -DuseAP=false RecordCompilationTests
+ * @run testng/othervm -DuseAP=true RecordCompilationTests
  */
 
 import java.io.File;
@@ -119,17 +119,7 @@ import static org.testng.Assert.assertEquals;
 
 @Test
 public class RecordCompilationTests extends CompilationTestCase {
-    // @@@ When records become a permanent feature, we don't need these any more
-    private static String[] PREVIEW_OPTIONS = {
-            "--enable-preview",
-            "-source", Integer.toString(Runtime.version().feature())
-    };
-
-    private static String[] PREVIEW_OPTIONS_WITH_AP = {
-            "--enable-preview",
-            "-source", Integer.toString(Runtime.version().feature()),
-            "-processor", SimplestAP.class.getName()
-    };
+    private static String[] OPTIONS_WITH_AP = {"-processor", SimplestAP.class.getName()};
 
     private static final List<String> BAD_COMPONENT_NAMES = List.of(
             "clone", "finalize", "getClass", "hashCode",
@@ -150,7 +140,9 @@ public class RecordCompilationTests extends CompilationTestCase {
     public RecordCompilationTests() {
         useAP = System.getProperty("useAP", "false").equals("true");
         setDefaultFilename("R.java");
-        setCompileOptions(useAP ? PREVIEW_OPTIONS_WITH_AP : PREVIEW_OPTIONS);
+        if (useAP) {
+            setCompileOptions(OPTIONS_WITH_AP);
+        }
         System.out.println(useAP ? "running all tests using an annotation processor" : "running all tests without annotation processor");
     }
 
@@ -485,365 +477,483 @@ public class RecordCompilationTests extends CompilationTestCase {
         assertFail("compiler.err.already.defined", template);
     }
 
-    public void testStaticLocalTypes() {
-        // local records can also be final
-        assertOK("class R { \n" +
-                "    void m() { \n" +
-                "        final record RR(int x) { };\n" +
-                "    }\n" +
-                "}");
+    public void testStaticLocals() {
+        // static locals can't capture local variables, instance fields or type variables
+        for (String s : List.of(
+                "record RR(int x) { public int x() { return y; }};",
+                "record RR(int x) { public int x() { return z; }};",
+                "record RR(int x) { public int x() { return instance; }};",
+                "record RR(T t) {};",
+                "record RR(U u) {};",
 
-        // Can't capture locals
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class R { \n" +
-                        "    void m(int y) { \n" +
-                        "        record RR(int x) { public int x() { return y; }};\n" +
-                        "    }\n" +
-                        "}");
+                "interface I { default int x() { return y; }};",
+                "interface I { default int x() { return z; }};",
+                "interface I { default int x() { return instance; }};",
+                "interface I { default int x(T t) { return 0; }};",
+                "interface I { default int x(U u) { return 0; }};",
 
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class R { \n" +
-                        "    void m() {\n" +
-                        "        int y;\n" +
-                        "        record RR(int x) { public int x() { return y; }};\n" +
-                        "    }\n" +
-                        "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    public static void m() {\n" +
-                "        String hello = \"hello\";\n" +
-                "        interface I {\n" +
-                "            public default void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        System.err.println(hello);\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    public static void m() {\n" +
-                "        String hello = \"hello\";\n" +
-                "        record R(int i) {\n" +
-                "            public void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        System.err.println(hello);\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    public static void m() {\n" +
-                "        String hello = \"hello\";\n" +
-                "        enum E {\n" +
-                "            A;\n" +
-                "            public void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        System.err.println(hello);\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    public static void m(String param) {\n" +
-                "        interface I {\n" +
-                "            public default void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        System.err.println(param);\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    public static void m(String param) {\n" +
-                "        record R(int i) {\n" +
-                "            public void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        System.err.println(param);\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    public static void m(String param) {\n" +
-                "        enum E {\n" +
-                "            A;\n" +
-                "            public void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        System.err.println(param);\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    String instanceField = \"instance\";\n" +
-                "    public static void m() {\n" +
-                "        interface I {\n" +
-                "            public default void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        System.err.println(instanceField);\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    String instanceField = \"instance\";\n" +
-                "    public static void m(String param) {\n" +
-                "        record R(int i) {\n" +
-                "            public void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        System.err.println(instanceField);\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    String instanceField = \"instance\";\n" +
-                "    public static void m(String param) {\n" +
-                "        enum E {\n" +
-                "            A;\n" +
-                "            public void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        System.err.println(instanceField);\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        // instance fields
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class R { \n" +
-                        "    int z = 0;\n" +
-                        "    void m() { \n" +
-                        "        record RR(int x) { public int x() { return z; }};\n" +
-                        "    }\n" +
-                        "}");
-
-        // or type variables
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class R<T> { \n" +
-                        "    void m() { \n" +
-                        "        record RR(T t) {};\n" +
-                        "    }\n" +
-                        "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class R {\n" +
-                "    static <U> U make(U u) { //method is static\n" +
-                "        interface Checker {\n" +
-                "            void check(U u);\n" +
-                "        }\n" +
-                "        return null;\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class LocalEnum {\n" +
-                "    static <U> U getAndSet(U u) { //method is static\n" +
-                "        enum X {\n" +
-                "            A;\n" +
-                "            U u;\n" +
-                "        }\n" +
-                "        return null;\n" +
-                "    }\n" +
-                "}\n");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class R {\n" +
-                "    static <U> U make(U u) { //method is static\n" +
-                "        record Checker() {\n" +
-                "            void check(U u);\n" +
-                "        }\n" +
-                "        return null;\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class R {\n" +
-                "    <U> U make(U u) { // enclosing method is not static\n" +
-                "        interface Checker {\n" +
-                "            void check(U u);\n" +
-                "        }\n" +
-                "        return null;\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class LocalEnum {\n" +
-                "    <U> U getAndSet(U u) { // enclosing method is not static\n" +
-                "        enum X {\n" +
-                "            A;\n" +
-                "            U u;\n" +
-                "        }\n" +
-                "        return null;\n" +
-                "    }\n" +
-                "}\n");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class R {\n" +
-                "    <U> U make(U u) { // enclosing method is not static\n" +
-                "        record Checker() {\n" +
-                "            void check(U u);\n" +
-                "        }\n" +
-                "        return null;\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    public static <T> void main(String[] args) {\n" +
-                "        interface I {\n" +
-                "            public default void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        T t = null;\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    public static <T> void main(String[] args) {\n" +
-                "        record R(int i) {\n" +
-                "            public void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        T t = null;\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        assertFail("compiler.err.non-static.cant.be.ref",
-                "class C {\n" +
-                "    public static <T> void main(String[] args) {\n" +
-                "        enum E {\n" +
-                "            A;\n" +
-                "            public void test1() {\n" +
-                "                class X {\n" +
-                "                    public void test2() {\n" +
-                "                        T t = null;\n" +
-                "                    }\n" +
-                "                }\n" +
-                "            }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}");
-
-        // but static fields are OK
-        assertOK("class R { \n" +
-                "    static int z = 0;\n" +
-                "    void m() { \n" +
-                "        record RR(int x) { public int x() { return z; }};\n" +
-                "    }\n" +
-                "}");
-        // Can't self-shadow
-        assertFail("compiler.err.already.defined",
+                "enum E { A; int x() { return y; }};",
+                "enum E { A; int x() { return z; }};",
+                "enum E { A; int x() { return instance; }};",
+                "enum E { A; int x(T t) { return 0; }};",
+                "enum E { A; int x(U u) { return 0; }};"
+        )) {
+            assertFail("compiler.err.non-static.cant.be.ref",
                 """
-                class R {
-                    void m() {
-                        record R(int x) { };
+                class R<T> {
+                    int instance = 0;
+                    <U> U m(int y) {
+                        int z;
+                        #S
+                        return null;
                     }
                 }
-                """
-        );
+                """.replaceFirst("#S", s));
+        }
+
+        // a similar example but a bit more complex
+        for (String s : List.of(
+                "record R() { void test1() { class X { void test2() { System.err.println(localVar); } } } }",
+                "record R() { void test1() { class X { void test2() { System.err.println(param); } } } }",
+                "record R() {void test1() { class X { void test2() { System.err.println(instanceField); } } } }",
+                "record R() { void test1() { class X { T t; } } }",
+                "record R() { void test1() { class X { U u; } } }",
+
+                "interface I { default void test1() { class X { void test2() { System.err.println(localVar); } } } }",
+                "interface I() { default void test1() { class X { void test2() {System.err.println(param);} } } }",
+                "interface I { default void test1() { class X { void test2() { System.err.println(instanceField); } } } }",
+                "interface I { default void test1() { class X { T t; } } }",
+                "interface I() { default void test1() { class X {U u;} } }",
+
+                "enum E { A; void test1() { class X { void test2() { System.err.println(localVar); } } } }",
+                "enum E { A; void test1() { class X { void test2() {System.err.println(param);} } } }",
+                "enum E { A; void test1() { class X { void test2() { System.err.println(instanceField); } } } }",
+                "enum E { A; void test1() { class X { T t; } } }",
+                "enum E { A; void test1() { class X {U u;} } }"
+        )) {
+            assertFail("compiler.err.non-static.cant.be.ref",
+                    """
+                    class C<T> {
+                        String instanceField = "instance";
+                        static <U> U m(String param) {
+                            String localVar = "local";
+                            #S
+                            return null;
+                    }
+                }
+                """.replaceFirst("#S", s));
+        }
+
+        // can't self-shadow
+        for (String s : List.of("record R() {}", "interface R {}", "enum R { A }")) {
+            assertFail("compiler.err.already.defined", "class R { void m() { #S } }".replaceFirst("#S", s));
+        }
+
         // can't be explicitly static
-        assertFail("compiler.err.illegal.start.of.expr",
+        for (String s : List.of("static record RR() { }", "static interface I {}", "static enum E { A }")) {
+            assertFail("compiler.err.illegal.start.of.expr", "class R { void m() { #S } }".replaceFirst("#S", s));
+        }
+
+        // but static fields can be accessed
+        for (String s : List.of(
+                "record RR() { public int x() { return z; } };",
+                "interface I { default int x() { return z; } }",
+                "enum E { A; int x() { return z; } }"
+        )) {
+            assertOK("class R { static int z = 0; void m() { #S } }".replaceFirst("#S", s));
+        }
+
+        // local records can also be final
+        assertOK("class R { void m() { final record RR(int x) { }; } }");
+    }
+
+    public void testStaticDefinitionsInInnerClasses() {
+        // static defs in inner classes can't capture instance fields or type variables
+        for (String s : List.of(
                 """
-                class R {
-                    void m() {
-                        static record RR(int x) { };
+                record R() {
+                    void test() { System.err.println(field); }
+                }
+                """,
+                """
+                record R() {
+                    void test(T t) {}
+                }
+                """,
+                """
+                record R() {
+                    void test1() {
+                        class X {
+                            void test2() { System.err.println(field); }
+                        }
+                    }
+                }
+                """,
+                """
+                record R() {
+                    void test1() {
+                        class X { void test2(T t) {} }
+                    }
+                }
+                """,
+
+                """
+                interface I {
+                    default void test() { System.err.println(field); }
+                }
+                """,
+                """
+                interface I {
+                    default void test(T t) {}
+                }
+                """,
+                """
+                interface I {
+                    default void test1() {
+                        class X {
+                            void test2() { System.err.println(field); }
+                        }
+                    }
+                }
+                """,
+                """
+                interface I {
+                    default void test1() {
+                        class X { void test2(T t) {} }
+                    }
+                }
+                """,
+
+                """
+                enum E {
+                    A;
+                    void test() { System.err.println(field); }
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test(T t) {}
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test1() {
+                        class X {
+                            void test2() { System.err.println(field); }
+                        }
+                    }
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test1() {
+                        class X { void test2(T t) {} }
+                    }
+                }
+                """,
+
+                """
+                static class SC {
+                    void test() { System.err.println(field); }
+                }
+                """,
+                """
+                static class SC {
+                    void test(T t) {}
+                }
+                """,
+                """
+                static class SC {
+                    void test1() {
+                        class X {
+                            void test2() { System.err.println(field); }
+                        }
+                    }
+                }
+                """,
+                """
+                static class SC {
+                    void test1() {
+                        class X { void test2(T t) {} }
                     }
                 }
                 """
-        );
+        )) {
+            assertFail("compiler.err.non-static.cant.be.ref",
+                    """
+                    class C<T> {
+                        String field = "field";
+                        class Inner {
+                            #S
+                        }
+                    }
+                    """.replaceFirst("#S", s));
+        }
 
-        // positive cases
-        assertOK(
+        // another, more complex, example
+        // static defs in inner classes can't capture instance locals, fields or type variables
+        for (String s : List.of(
                 """
-                import java.security.*;
-                class Test {
-                    static Test newInstance(Object provider) {
-                        return new Test() {
-                            private final PrivilegedExceptionAction<KeyStore> action = new PrivilegedExceptionAction<KeyStore>() {
-                                public KeyStore run() throws Exception {
-                                    if (provider == null) {}
-                                    return null;
-                                }
-                            };
-                        };
+                record R() {
+                    void test() { System.err.println(field); }
+                }
+                """,
+                """
+                record R() {
+                    void test1() {
+                        class X { void test2() { System.err.println(field); } }
+                    }
+                }
+                """,
+                """
+                record R() {
+                    void test() { System.err.println(param); }
+                }
+                """,
+                """
+                record R() {
+                    void test1() {
+                        class X { void test2() { System.err.println(param); } }
+                    }
+                }
+                """,
+                """
+                record R() {
+                    void test() { System.err.println(local); }
+                }
+                """,
+                """
+                record R() {
+                    void test1() {
+                        class X { void test2() { System.err.println(local); } }
+                    }
+                }
+                """,
+                """
+                record R() {
+                    void test(T t) {}
+                }
+                """,
+                """
+                record R() {
+                    void test1() {
+                        class X { void test2(T t) {} }
+                    }
+                }
+                """,
+
+                """
+                interface I {
+                    default void test() { System.err.println(field); }
+                }
+                """,
+                """
+                interface I {
+                    default void test1() {
+                        class X {
+                            void test2() { System.err.println(field); }
+                        }
+                    }
+                }
+                """,
+                """
+                interface I {
+                    default void test() { System.err.println(param); }
+                }
+                """,
+                """
+                interface I {
+                    default void test1() {
+                        class X {
+                            void test2() { System.err.println(param); }
+                        }
+                    }
+                }
+                """,
+                """
+                interface I {
+                    default void test() { System.err.println(local); }
+                }
+                """,
+                """
+                interface I {
+                    default void test1() {
+                        class X {
+                            void test2() { System.err.println(local); }
+                        }
+                    }
+                }
+                """,
+                """
+                interface I {
+                    default void test(T t) {}
+                }
+                """,
+                """
+                interface I {
+                    default void test1() {
+                        class X { void test2(T t) {} }
+                    }
+                }
+                """,
+
+                """
+                enum E {
+                    A;
+                    void test() { System.err.println(field); }
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test1() {
+                        class X {
+                            void test2() { System.err.println(field); }
+                        }
+                    }
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test() { System.err.println(param); }
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test1() {
+                        class X {
+                            void test2() { System.err.println(param); }
+                        }
+                    }
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test() { System.err.println(local); }
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test1() {
+                        class X {
+                            void test2() { System.err.println(local); }
+                        }
+                    }
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test(T t) {}
+                }
+                """,
+                """
+                enum E {
+                    A;
+                    void test1() {
+                        class X { void test2(T t) {} }
+                    }
+                }
+                """,
+
+                """
+                static class SC {
+                    void test() { System.err.println(field); }
+                }
+                """,
+                """
+                static class SC {
+                    void test1() {
+                        class X {
+                            void test2() { System.err.println(field); }
+                        }
+                    }
+                }
+                """,
+                """
+                static class SC {
+                    void test() { System.err.println(param); }
+                }
+                """,
+                """
+                static class SC {
+                    void test1() {
+                        class X {
+                            void test2() { System.err.println(param); }
+                        }
+                    }
+                }
+                """,
+                """
+                static class SC {
+                    void test() { System.err.println(local); }
+                }
+                """,
+                """
+                static class SC {
+                    void test1() {
+                        class X {
+                            void test2() { System.err.println(local); }
+                        }
+                    }
+                }
+                """,
+                """
+                static class SC {
+                    void test(T t) {}
+                }
+                """,
+                """
+                static class SC {
+                    void test1() {
+                        class X { void test2(T t) {} }
                     }
                 }
                 """
-        );
-
-        assertOK(
-                """
-                import java.security.*;
-                class Test {
-                    static Test newInstance(Object provider) {
-                        return new Test() {
-                            int m(PrivilegedExceptionAction<KeyStore> a) { return 0; }
-                            {
-                                m(
-                                    new PrivilegedExceptionAction<KeyStore>() {
-                                        public KeyStore run() throws Exception {
-                                            if (provider == null) {}
-                                            return null;
-                                        }
-                                    }
-                                );
+        )) {
+            assertFail("compiler.err.non-static.cant.be.ref",
+                    """
+                    class C<T> {
+                        String field = "field";
+                        <U> U m(String param) {
+                            String local = "local";
+                            class Local {
+                                class Inner { #S }
                             }
-                        };
+                            return null;
+                        }
                     }
+                    """.replaceFirst("#S", s));
+        }
+
+        // inner classes can contain static methods too
+        assertOK(
+                """
+                class C {
+                    class Inner {
+                        // static method inside inner class
+                        static void m() {}
+                    }
+                }
+                """
+        );
+
+        assertOK(
+                """
+                class C {
+                     void m() {
+                         new Object() {
+                            // static method inside inner class
+                            static void m() {}
+                         };
+                     }
                 }
                 """
         );
@@ -877,7 +987,7 @@ public class RecordCompilationTests extends CompilationTestCase {
     }
 
     public void testRecordsInsideInner() {
-        assertFail("compiler.err.static.declaration.not.allowed.in.inner.classes",
+        assertOK(
                 """
                 class Outer {
                     class Inner {
@@ -886,7 +996,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                 }
                 """
         );
-        assertFail("compiler.err.static.declaration.not.allowed.in.inner.classes",
+        assertOK(
                 """
                 class Outer {
                     public void test() {
@@ -896,7 +1006,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                     }
                 }
                 """);
-        assertFail("compiler.err.static.declaration.not.allowed.in.inner.classes",
+        assertOK(
                 """
                 class Outer {
                     Runnable run = new Runnable() {
@@ -905,7 +1015,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                     };
                 }
                 """);
-        assertFail("compiler.err.static.declaration.not.allowed.in.inner.classes",
+        assertOK(
                 """
                 class Outer {
                     void m() {
@@ -1010,7 +1120,7 @@ public class RecordCompilationTests extends CompilationTestCase {
         String[] previousOptions = getCompileOptions();
         String[] testOptions = {/* no options */};
         setCompileOptions(testOptions);
-        assertOKWithWarning("compiler.warn.restricted.type.not.allowed.preview",
+        assertFail("compiler.err.illegal.start.of.type",
                 "class R {\n" +
                 "    record RR(int i) {\n" +
                 "        return null;\n" +
@@ -1062,8 +1172,6 @@ public class RecordCompilationTests extends CompilationTestCase {
         );
 
         String[] generalOptions = {
-                "--enable-preview",
-                "-source", Integer.toString(Runtime.version().feature()),
                 "-processor", Processor.class.getName(),
                 "-Atargets="
         };
@@ -1681,5 +1789,40 @@ public class RecordCompilationTests extends CompilationTestCase {
             );
             removeLastCompileOptions(2);
         }
+    }
+
+    public void testAnnotationsOnVarargsRecComp() {
+        assertOK(
+                """
+                import java.lang.annotation.*;
+
+                @Target({ElementType.TYPE_USE})
+                @interface Simple {}
+
+                record R(@Simple int... val) {
+                    static void test() {
+                        R rec = new R(10, 20);
+                    }
+                }
+                """
+        );
+        assertOK(
+                """
+                import java.lang.annotation.*;
+
+                @Target({ElementType.TYPE_USE})
+                @interface SimpleContainer{ Simple[] value(); }
+
+                @Repeatable(SimpleContainer.class)
+                @Target({ElementType.TYPE_USE})
+                @interface Simple {}
+
+                record R(@Simple int... val) {
+                    static void test() {
+                        R rec = new R(10, 20);
+                    }
+                }
+                """
+        );
     }
 }
